Fix deflationomics section text alignment

--- a/src/pages/home/syles.module.scss
+++ b/src/pages/home/syles.module.scss
@@ -29,6 +29,7 @@
   font-family: Open Sans;
   list-style-type: none;
   font-size: 1.8ch;
+  text-align: left;
 
   & li {
     margin-top: 0.8em;
